testing zoom fix on ios

--- a/library-app/src/app.css
+++ b/library-app/src/app.css
@@ -119,6 +119,7 @@ header {
   display: flex;
   align-items: center;
   width: 100%;
+  overflow: hidden;
 }
 header .inner-wrap {
   display: flex;
@@ -205,6 +206,7 @@ main {
   border-radius: var(--radius);
   padding: 2rem;
   position: relative;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   max-height: 100vh;
